# KU-COMP

./: README.md
COMP132-AdvancedProgramming/: Student_P3.c  syllabus
COMP132-AdvancedProgramming/KoçCat/src/: KocCat.java
COMP132-AdvancedProgramming/MoviesDB/src/: Main.java  MovieParser.java  Utils.java
COMP200-StructureInterp.ofComputerPrograms/project0/: project0.scm
COMP200-StructureInterp.ofComputerPrograms/project1/: project1.scm
COMP200-StructureInterp.ofComputerPrograms/project2/: curves.scm  curves_setup_racket.scm  curves_utils.scm  drawing_racket.scm  points_segs.scm  points_segs.scm~  project2.scm  project2.scm~
COMP200-StructureInterp.ofComputerPrograms/project3/: databases.scm~  project3.scm~
COMP202-Algorithms&DataStructures/p1/68906/: Angora.java  Caracal.java  Cat.java  iBehavior.java
COMP202-Algorithms&DataStructures/p6/: BaseGraph.java  DirectedUnweightedGraph.java  DirectedWeightedGraph.java  GraphAlgorithms.java  ImageSegmenter.java  UndirectedUnweightedGraph.java  UndirectedWeightedGraph.java
COMP302-SoftwareEngineering/2020_302_guys-we-have-to-go-faster/: README.md
COMP304-OperatingSystems/p1/: CMakeLists.txt  hashmap.c  seashell.c
COMP304-OperatingSystems/p2/p2/: CMakeLists.txt  README.md  p2.cpp
COMP304-OperatingSystems/p2/p2/include/: Commentator.h  LockQueue.h  p2.h  util.h
COMP304-OperatingSystems/p3/: part1.c  part2.c  readme.md
COMP341-IntrotoAI/p1/68906/: search.py  (+1 more)
ELEC204-DigitalDesign/ELEC 204/: 1.docx  2- something.docx  2.docx  3.docx  Template.docx  lab 4 preliminary lab.docx  lab3 report.docx  lab5 (1).7z
(+292 files in other folders)
